--- a/{{ cookiecutter.repo_name }}/tox.ini
+++ b/{{ cookiecutter.repo_name }}/tox.ini
@@ -1,3 +1,16 @@
 [flake8]
-max-line-length = 79
+max-line-length = 120
 max-complexity = 10
+exclude =
+    __pycache__,
+    docs,
+    reports,
+    .pytest_cache/,
+    # This contains our built documentation
+    build,
+    # This contains builds of flake8 that we don't want to check
+    dist
+per-file-ignores =
+    # imported but unused
+    __init__.py: F401
+statistics = True
