--- a/{{ cookiecutter.repo_name }}/Makefile
+++ b/{{ cookiecutter.repo_name }}/Makefile
@@ -20,7 +20,7 @@ endif
 
 ## Install Python Dependencies
 requirements: test_environment
-	$(PYTHON_INTERPRETER) -m pip install -U pip setuptools wheel build
+	$(PYTHON_INTERPRETER) -m pip install --no-cache-dir -U pip setuptools wheel build
 	$(PYTHON_INTERPRETER) -m pip install --no-cache-dir -r requirements.txt
 
 ## Update Python Dependencies
