--- a/{{ cookiecutter.repo_name }}/.gitignore
+++ b/{{ cookiecutter.repo_name }}/.gitignore
@@ -76,7 +76,7 @@ target/
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-/data/
+/artifacts/data/
 
 # Mac OS-specific storage files
 .DS_Store
@@ -87,3 +87,6 @@ target/
 
 # Mypy cache
 .mypy_cache/
+
+# pytest
+.pytest_cache
