--- a/{{ cookiecutter.repo_name }}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/requirements.txt
@@ -1,9 +1,28 @@
-# local package
--e .
+# General
+tqdm
+ipykernel
+jupyterlab
 
-# external requirements
-click
-Sphinx
-coverage
-flake8
-python-dotenv>=0.5.1
+# Scientific computing
+scipy
+numpy
+
+# ML/DL
+scikit-learn
+
+# Data Processing
+pyarrow
+pandas
+imblearn
+
+# Data Validation
+great-expectations
+
+# Data Visualization
+matplotlib
+seaborn
+pandas-profiling    # generates a detailed EDA report with a few lines
+
+# Object Serialization
+joblib
+onnx
