--- a/{{ cookiecutter.repo_name }}/tox.ini
+++ b/{{ cookiecutter.repo_name }}/tox.ini
@@ -1,16 +1,23 @@
-[flake8]
-max-line-length = 120
-max-complexity = 10
-exclude =
-    __pycache__,
-    docs,
-    reports,
-    .pytest_cache/,
-    # This contains our built documentation
-    build,
-    # This contains builds of flake8 that we don't want to check
-    dist
-per-file-ignores =
-    # imported but unused
-    __init__.py: F401
-statistics = True
+[tox]
+minversion = 3.8.0
+envlist = py310, flake8, mypy
+isolated_build = true
+
+[testenv]
+setenv =
+    PYTHONPATH = {toxinidir}
+deps =
+    -e .[testing]
+commands =
+    pytest --basetemp={envtmpdir}
+
+[testenv:flake8]
+basepython = python3.10
+deps = flake8
+commands = flake8 src test
+
+[testenv:mypy]
+basepython = python3.10
+deps =
+    -e .[testing]
+commands = mypy src
