--- a/{{ cookiecutter.repo_name }}/setup.cfg
+++ b/{{ cookiecutter.repo_name }}/setup.cfg
@@ -33,6 +33,8 @@ warn_unused_configs = true
 no_implicit_reexport = true
 
 [flake8]
+paths =
+    {%- if cookiecutter.project_kind == "data science" -%} pipeline {%- elif cookiecutter.project_kind == "python library" -%} src {% endif %}
 max-line-length = 120
 max-complexity = 10
 exclude =
